--- a/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
@@ -3,14 +3,19 @@
 :host {
     @include media-breakpoint-down(md) {
         .box-container {
-            width: 87%;
-            margin: 0 auto;
-            box-shadow: 1px 3px 11px #CCC;
-            padding: 0 24px;
-            margin: 14px auto 0 auto;
+            width: calc(100% - 32px);
+            max-width: 100%;
+            margin: 16px auto 8px auto;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+            padding: 16px 16px;
+            border-radius: 8px;
 
             &.no-padding {
                 padding: 0;
+            }
+
+            &:first-of-type {
+                margin-top: 16px;
             }
         }
     }
